# investment-horse-racing-crawler

./: .dockerignore  .env.original  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.develop  Dockerfile.production  LICENSE  Pipfile  README.md  compose.yml  docker-compose.yml  logging.conf  logging.ini  pyproject.toml  scrapy.cfg
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/workflows/: build-and-push.yml  build.yml
horse_racing_crawler/: __init__.py  __main__.py  contracts.py  items.py  middlewares.py  pipelines.py  settings.py
horse_racing_crawler/spiders/: netkeiba_spider.py
horse_racing_mq/: main.py
investment_horse_racing_crawler/alembic/: env.py
investment_horse_racing_crawler/alembic/versions/: d324ab632e61_init_tables.py
investment_horse_racing_crawler/scrapy/: items.py  pipelines.py  settings.py
investment_horse_racing_crawler/scrapy/spiders/: horse_racing_spider.py
old/: Pipfile
old/investment_horse_racing_crawler/: __init__.py
old/investment_horse_racing_crawler/scrapy/: contracts.py  items.py  middlewares.py  pipelines.py  settings.py
old/investment_horse_racing_crawler/scrapy/spiders/: horse_racing_spider.py
old/tests/: test_pipelines.py
tests/: test_pipelines.py
