[tool.poetry]
name = "horse-racing-crawler"
version = "5.1.2"
description = "中央競馬データを収集する"
authors = ["u6k <u6k.apps@gmail.com>"]
readme = "README.md"
packages = [{include = "horse_racing_crawler"}]

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.12.0"
boto3 = "^1.37.23"
joblib = "^1.4.2"
pika = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.0.0"
pyproject-flake8 = "^7.0.0"
poethepoet = "^0.33.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 1000

[tool.flake8]
max-line-length = 1000

[tool.isort]
profile = "black"
line_length = 1000

[tool.poe.tasks]
lint = "pflake8 ./horse_racing_crawler/ ./horse_racing_mq/ ./tests/"
fix = [{cmd="black ./horse_racing_crawler/ ./horse_racing_mq/ ./tests/"}, {cmd="isort ./horse_racing_crawler/ ./horse_racing_mq/ ./tests/"}]
test = [{cmd="scrapy check netkeiba_spider -L DEBUG"}]
crawl = "scrapy crawl netkeiba_spider"
start_spider = "python ./horse_racing_mq/main.py"
